Package URL corrections

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,13 +4,12 @@
     <Company />
     <Product>Graph Theory</Product>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/sdcondon/GraphTheory</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/sdcondon/GraphTheory</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions.git</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-
-    <Version>1.0.0</Version>
+    <Version>0.0.0-localbuild+localbuild</Version>
   </PropertyGroup>
 
   <PropertyGroup>
