--- a/src/Abstractions/Abstractions.csproj
+++ b/src/Abstractions/Abstractions.csproj
@@ -7,6 +7,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>graph theory abstractions</PackageTags>
     <PackageIcon>SCGraphTheoryIcon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <AssemblyName>SCGraphTheory.Abstractions</AssemblyName>
     <RootNamespace>SCGraphTheory</RootNamespace>
 
