A couple of minor package-y things:
* Added release notes link to package metadata.
* Changed the "Product" metadata item from "Graph Theory" to "SCGraphTheory".

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,10 +2,11 @@
   <PropertyGroup>
     <Authors>Simon Condon</Authors>
     <Company />
-    <Product>Graph Theory</Product>
+    <Product>SCGraphTheory</Product>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions.git</RepositoryUrl>
     <PackageProjectUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions</PackageProjectUrl>
+    <PackageReleaseNotes>See https://github.com/sdcondon/SCGraphTheory.Abstractions/releases.</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>2020 Simon Condon</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
