--- a/src/Abstractions/Abstractions.csproj
+++ b/src/Abstractions/Abstractions.csproj
@@ -15,8 +15,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="SCGraphTheoryIcon.png" Pack="true" PackagePath=""/>
+    <None Include="SCGraphTheoryIcon.png" Pack="true" PackagePath="" />
     <None Include="README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
