--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,10 +6,10 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions.git</RepositoryUrl>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageProjectUrl>https://github.com/sdcondon/SCGraphTheory.Abstractions</PackageProjectUrl>
+    <PackageProjectUrl>https://sdcondon.net/SCGraphTheory/abstractions</PackageProjectUrl>
     <PackageReleaseNotes>See https://github.com/sdcondon/SCGraphTheory.Abstractions/releases.</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>2020 Simon Condon</Copyright>
+    <Copyright>2020-2023 Simon Condon</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
