--- a/.github/workflows/PublishNuGetPackage.yml
+++ b/.github/workflows/PublishNuGetPackage.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v4
 
-    - uses: actions/setup-dotnet@v1
+    - uses: actions/setup-dotnet@v3
 
     - uses: nuget/setup-nuget@v1
       with:
