--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -22,7 +22,7 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' != 'true' And Exists('C:\Users\simon\Code\Packages')">
-    <PackageOutputPath>C:\Users\simon\Code\Packages</PackageOutputPath>
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' != 'true' And Exists('C:\Users\simon\Coding\Packages')">
+    <PackageOutputPath>C:\Users\simon\Coding\Packages</PackageOutputPath>
   </PropertyGroup>
 </Project>
