--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,20 +9,23 @@
     <PackageProjectUrl>https://sdcondon.net/SCGraphTheory/abstractions</PackageProjectUrl>
     <PackageReleaseNotes>See https://github.com/sdcondon/SCGraphTheory.Abstractions/releases.</PackageReleaseNotes>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>2020-2023 Simon Condon</Copyright>
+    <Copyright>2020-2024 Simon Condon</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
 
-    <!-- NB: timestamp below doesn't include seconds because depending on such a package gets VS into an infinite restore loop.. -->
+    <!-- NB: timestamp below doesn't include seconds because depending on such a package gets VS into an infinite restore loop. -->
+    <!-- More than one build in a minute isn't something that's going to be an issue, though. -->
     <Version>0.0.0-local.$([System.DateTime]::Now.ToString(yyMMddTHHmm))</Version>
+    <!-- Might make this cleverer if anyone else starts contributing to this (look for local package sources with Powershell, maybe?) -->
+    <LocalPackageSource>$(UserProfile)\Coding\Packages</LocalPackageSource>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' != 'true' And Exists('C:\Users\simon\Coding\Packages')">
-    <PackageOutputPath>C:\Users\simon\Coding\Packages</PackageOutputPath>
+  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' != 'true' And Exists('$(LocalPackageSource)')">
+    <PackageOutputPath>$(LocalPackageSource)</PackageOutputPath>
   </PropertyGroup>
 </Project>
